# makepdf

./: .gitignore  .luarc.json  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: releases.yml  tests.yml
assets/scripts/: definitions.lua  definitions.luau  example.lua  panda.lua  panda.luau  stdlib.lua
examples/: panda.lua  planner.lua
src/: components.rs  constants.rs  context.rs  engine.rs  lib.rs  main.rs  pdf.rs  pdf_box.rs  planner.rs  runtime.rs  utils.rs
src/components/: box.rs  link.rs  rect.rs  text.rs
src/engine/: doc.rs  font.rs  hooks.rs  pages.rs  planner.rs  script.rs
src/engine/doc/: font.rs
src/engine/hooks/: daily.rs  monthly.rs  weekly.rs
src/engine/pages/: key.rs  kind.rs  map.rs  page.rs
src/engine/utils/: bounds.rs  space.rs
src/pdf/: common.rs  components.rs  config.rs  context.rs  hooks.rs  object.rs  page.rs  pages.rs  utils.rs
src/pdf/common/: align.rs  bounds.rs  color.rs  date.rs  ext.rs  line.rs  link.rs  mode.rs  order.rs  padding.rs  point.rs  space.rs
src/pdf/components/: line.rs  link.rs  outline.rs
src/pdf/config/: page.rs  planner.rs
src/pdf/hooks/: daily.rs  monthly.rs  weekly.rs
src/pdf/object/: bounds.rs  circle.rs  group.rs  line.rs  rect.rs  shape.rs  space.rs  text.rs  type.rs
src/pdf_box/: padding.rs  rect.rs
src/planner/: config.rs  day.rs  font.rs  global.rs
src/runtime/: doc.rs  fonts.rs  hooks.rs  pages.rs  script.rs
src/runtime/doc/: font.rs
src/runtime/hooks/: daily.rs  monthly.rs  weekly.rs
src/runtime/pages/: key.rs  kind.rs  page.rs
src/utils/: bounds.rs  layout.rs  rect.rs
(+7 files in other folders)
